agregando imagen y tamaño y color a ala cabecera

--- a/aqui.html
+++ b/aqui.html
@@ -10,13 +10,14 @@
 <body>
 
     <div class="container">
+        <img src="https://dble.bn-ent.net/shared/img/keyvisual.png" alt="45">
     <div id="cabecera"> cabecera</div>
     <h1>aqui vamos hacer un blog</h1>
     <p>y este es el parrafo de inicio</p>
     <p>faksflasjflkasjldkasjdlkasjdlakjdklajsdlkasjdlaks
         asdasdasdasdasdasda
     </p>
-
+  
 </div>
 </body>
 </html>
