agregando pie de pagina

--- a/aqui.html
+++ b/aqui.html
@@ -17,6 +17,11 @@
     <p>faksflasjflkasjldkasjdlkasjdlakjdklajsdlkasjdlaks
         asdasdasdasdasdasda
     </p>
+    <p>jhfjasflajdlkajasdgjhdasgdaskajshdkajshdkasjdaskdas</p>
+
+    <footer>
+        pie de pagina 
+    </footer>
   
 </div>
 </body>
