--- a/aqui.html
+++ b/aqui.html
@@ -12,7 +12,7 @@
     <div class="container">
         <img src="https://dble.bn-ent.net/shared/img/keyvisual.png" alt="45">
     <div id="cabecera"> cabecera</div>
-    <h1>aqui vamos hacer un blog</h1>
+    <h1>aqui vamos hacer un cabecera</h1>
     <p>y este es el parrafo de inicio</p>
     <p>faksflasjflkasjldkasjdlkasjdlakjdklajsdlkasjdlaks
         asdasdasdasdasdasda
