--- a/aqui.html
+++ b/aqui.html
@@ -4,7 +4,7 @@ i<!DOCTYPE html>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>reporsitorio</title>
+    <title>bienvenido al blog</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
